--- a/index.html
+++ b/index.html
@@ -4,3 +4,8 @@
 
 <div id="Discord"></div>
 <a href="https://discord.gg/vpSuKEPZbj">Beluga</a>
+
+<ul>
+  <li>Wolfie</li>
+  <li>Sunflower</li>
+</ul>
