--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
 <ul>
   <li>Wolfie</li>
   <li>Sunflower</li>
+  <li>Kalidasa</li> <img src="213780213.png" width="20px" height="20px">
+  <li>ParrotGab</li>    
 </ul>
